<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home"/>

    <item
        android:id="@+id/navigation_restaurant_menu"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/navigation_menu"/>

    <item
        android:id="@+id/navigation_book_table"
        android:icon="@drawable/ic_book_table"
        android:title="@string/navigation_book_table"/>

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/navigation_gallery"/>

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/navigation_news"/>

    <item
      android:id="@+id/navigation_location"
      android:icon="@drawable/ic_location"
      android:title="@string/navigation_location"/>

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/navigation_contacts"/>
    <item
      android:id="@+id/navigation_login"
      android:icon="@drawable/ic_person"
      android:title="@string/navigation_login"/>

  </group>

</menu>