<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <ImageView
      android:id="@+id/iv_welcome"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/view_book_table_welcome"
      app:layout_constraintDimensionRatio="16:9"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription"/>

  <TextView
      android:id="@+id/tv_welcome_label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_small"
      android:text="@string/view_book_table_welcome_label"
      android:textAllCaps="true"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_welcome"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_small"
      android:hint="@string/view_book_table_date_hint"
      app:layout_constraintEnd_toEndOf="@+id/tv_welcome_label"
      app:layout_constraintStart_toStartOf="@+id/tv_welcome_label"
      app:layout_constraintTop_toBottomOf="@+id/tv_welcome_label">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_date_and_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:clickable="true"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/view_book_table_name_hint"
      app:layout_constraintEnd_toEndOf="@+id/til_date"
      app:layout_constraintStart_toStartOf="@+id/til_date"
      app:layout_constraintTop_toBottomOf="@+id/til_date"
      tools:layout_editor_absoluteX="8dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/view_book_table_email_hint"
      app:layout_constraintEnd_toEndOf="@+id/til_name"
      app:layout_constraintStart_toStartOf="@+id/til_name"
      app:layout_constraintTop_toBottomOf="@+id/til_name">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <LinearLayout
      android:id="@+id/til_guests"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_small"
      android:hint="@string/view_book_table_adults_hint"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="@+id/til_email"
      app:layout_constraintStart_toStartOf="@+id/til_email"
      app:layout_constraintTop_toBottomOf="@+id/til_email">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_guests"
        android:gravity="center"/>

    <NumberPicker
        android:id="@+id/np_guests"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </LinearLayout>

  <com.devonfw.mythaistar.view.LinkedCheckBox
      android:id="@+id/check_box_accept_terms"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/btn_book_table"
      app:layout_constraintStart_toStartOf="@+id/til_adults"
      app:layout_constraintTop_toTopOf="@+id/btn_book_table"/>

  <Button
      android:id="@+id/btn_book_table"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/view_book_table_invite_button_label"
      app:layout_constraintEnd_toEndOf="@+id/til_guests"
      app:layout_constraintTop_toBottomOf="@+id/til_guests"/>

</merge>
