<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <ImageView
      android:id="@+id/iv_welcome"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/view_invite_friends_welcome"
      app:layout_constraintDimensionRatio="16:9"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="ContentDescription"/>

  <TextView
      android:id="@+id/tv_welcome_label"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_small"
      android:text="@string/view_invite_friends_welcome_label"
      android:textAllCaps="true"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_welcome"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_date_and_time"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_small"
      android:hint="@string/view_invite_friends_date_hint"
      app:layout_constraintEnd_toEndOf="@+id/tv_welcome_label"
      app:layout_constraintStart_toStartOf="@+id/tv_welcome_label"
      app:layout_constraintTop_toBottomOf="@+id/tv_welcome_label">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_date_and_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_small"
      android:hint="@string/view_invite_friends_name_hint"
      app:layout_constraintEnd_toEndOf="@+id/til_date_and_time"
      app:layout_constraintStart_toStartOf="@+id/til_date_and_time"
      app:layout_constraintTop_toBottomOf="@+id/til_date_and_time">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/view_invite_friends_email_hint"
      app:layout_constraintEnd_toEndOf="@+id/til_name"
      app:layout_constraintStart_toStartOf="@+id/til_name"
      app:layout_constraintTop_toBottomOf="@+id/til_name">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_friends"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_small"
      android:hint="@string/view_invite_friends_friends_hint"
      app:layout_constraintEnd_toEndOf="@+id/til_email"
      app:layout_constraintStart_toStartOf="@+id/til_email"
      app:layout_constraintTop_toBottomOf="@+id/til_email">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </android.support.design.widget.TextInputLayout>

  <com.devonfw.mythaistar.view.LinkedCheckBox
      android:id="@+id/check_box_accept_terms"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="@+id/btn_invite_friends"
      app:layout_constraintStart_toStartOf="@+id/til_friends"
      app:layout_constraintTop_toTopOf="@+id/btn_invite_friends"/>

  <Button
      android:id="@+id/btn_invite_friends"
      style="@style/AppTheme.Button.Transparent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/view_invite_friends_invite_button_label"
      app:layout_constraintEnd_toEndOf="@+id/til_friends"
      app:layout_constraintTop_toBottomOf="@+id/til_friends"/>

</merge>
