<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/screen_news_addNews"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>



            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialogFr_add_news_titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/screen_news_titleHint"
                android:inputType="textMultiLine"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialogFr_add_news_descriptionEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/screen_news_descriptionHint"
                android:inputType="textMultiLine"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogFr_add_news_titleEt" />

            <Button
                android:id="@+id/newsAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/screen_news_add"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogFr_add_news_descriptionEt" />

            <Button
                android:id="@+id/newsCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/screen_news_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogFr_add_news_descriptionEt" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/picture_height"
                android:src="@drawable/home_item_invite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="Contentdescription" />

            <TextView
                android:id="@+id/newsLoadPictureTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/screen_news_loadPicture"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorLabelContrast"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.519"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

            <TextView
                android:id="@+id/newsDefaultPictureTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:layout_margin="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/screen_news_defaultPicture"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorLabelContrast"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                 />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


