<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/margin_normal">

    <TextView
        android:id="@+id/tv_booking_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/screen_booking_welcome_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_booking_label">

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

          <android.support.design.widget.TabItem
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/screen_booking_book_table_label"/>

          <android.support.design.widget.TabItem
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/screen_booking_invite_label"/>

        </android.support.design.widget.TabLayout>

        <com.devonfw.mythaistar.view.SlideViewSwitcher
            android:id="@+id/view_switcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:measureAllChildren="false"
            android:paddingBottom="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout">
          <com.devonfw.mythaistar.booking.BookTableView
              android:id="@+id/view_book_table"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
          <com.devonfw.mythaistar.booking.InviteFriendsView
              android:id="@+id/view_invite_friends"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>



        </com.devonfw.mythaistar.view.SlideViewSwitcher>

      </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

  </android.support.constraint.ConstraintLayout>

</ScrollView>
